# kac

./: .env.example  .gitignore  .sops.yaml  CLAUDE.md  CMakeLists.txt  README.md  RUN_EXAMPLES.md  TROUBLESHOOTING.md  analyze_mexc  analyze_mexc.cpp  secrets.enc.yaml  secrets.yaml.template  setup-git.sh  test_fx_rate  test_fx_rate.cpp  test_mexc.cpp  test_protobuf  test_protobuf.cpp  test_simple_fx  test_simple_fx.cpp  test_simple_mexc  test_simple_mexc.cpp  vcpkg.json
.claude/: CLAUDE_CODE_GUIDE.md  CLAUDE_CODE_RULES.md  PROGRESS.md  REFACTORING_PLAN.md  TASK_ORDER.md  conversation_history.md
.claude/tasks/: TASK_01_project_setup.md  TASK_02_websocket.md  TASK_03_order_api.md  TASK_04_fxrate.md  TASK_05_premium_matrix.md  TASK_06_lowlatency_infra.md  TASK_07_rate_limiter_parser.md  TASK_08_executor.md  TASK_09_transfer.md  TASK_10_orderbook_analyzer.md  TASK_11_fee_calculator.md  TASK_12_risk_model.md  TASK_13_decision_engine.md  TASK_14_strategy_plugin.md  TASK_15_config_hotreload.md  TASK_16_secrets_manager.md  TASK_17_multi_account.md  TASK_18_symbol_master.md  TASK_19_event_bus.md  TASK_20_thread_manager.md  TASK_21_graceful_shutdown.md  TASK_22_health_check.md  TASK_23_tcp_server.md  TASK_24_alert_system.md  TASK_25_daily_loss_limit.md  TASK_26_watchdog.md  TASK_27_cli_tool.md  TASK_28_trading_stats.md  TASK_29_integration_test.md  TASK_30_cmake_fix_app_skeleton.md  TASK_31_hot_cold_threads.md  TASK_32_order_execution_pipeline.md  TASK_33_cold_services.md  TASK_34_utility_threads_shutdown.md  TASK_35_e2e_dry_run.md  TASK_36_shm_spsc_queue.md  TASK_37_feeder_process.md  TASK_38_feeder_executables.md  TASK_39_engine_shm_consumer.md  TASK_40_watchdog_multiprocess.md  (+9 more)
cmake/: CompilerFlags.cmake  Dependencies.cmake
config/: fees.yaml.example
docs/: API_KEY_GUIDE.md  BINANCE_FEED_FIX.md  CLIENT_TCP_COMMUNICATION.md  CODE_REVIEW_2026-06.md  EXCHANGE_API_CHARACTERISTICS.md  GO_VS_CPP_COMPARISON.md  ORDER_PROCESSING_FLOW.md  PRIVATE_WEBSOCKET_SPEC.md  SOPS_AGE_DESIGN.md  xxx.md
examples/: CMakeLists.txt  alert_test.cpp  cli_test.cpp  daily_limit_test.cpp  data_logger.cpp  event_bus_test.cpp  executor_test.cpp  fee_calculator_test.cpp  feeder_test.cpp  fxrate_example.cpp  health_check_test.cpp  lowlatency_test.cpp  order_example.cpp  order_tracker_test.cpp  orderbook_analyzer_test.cpp  premium_example.cpp  rate_limiter_test.cpp  secrets_test.cpp  shm_queue_test.cpp  shm_reader.cpp  shm_ringbuffer_test.cpp  shutdown_test.cpp  tcp_server_test.cpp  thread_manager_test.cpp  trading_stats_test.cpp  transfer_test.cpp  watchdog_test.cpp  websocket_example.cpp
include/arbitrage/app/: application.hpp  service_locator.hpp
include/arbitrage/cold/: monitor_process.hpp  order_manager_process.hpp  risk_manager_process.hpp
include/arbitrage/common/: account_manager.hpp  compiler.hpp  config.hpp  config_watcher.hpp  crypto.hpp  error.hpp  fast_json_parser.hpp  fee_calculator.hpp  fee_constants.hpp  fxrate.hpp  http_client.hpp  json.hpp  lockfree_queue.hpp  logger.hpp  memory_pool.hpp  numa_allocator.hpp  pooled_types.hpp  rate_limiter.hpp  runtime_keystore.hpp  secrets.hpp  simd_json_parser.hpp  spin_wait.hpp  symbol_master.hpp  thread_config.hpp  thread_manager.hpp  types.hpp
include/arbitrage/exchange/: interface.hpp  order_base.hpp  websocket_base.hpp
include/arbitrage/executor/: dual_order.hpp  order_tracker.hpp  recovery.hpp  transfer.hpp  types.hpp
include/arbitrage/feeder/: feeder_process.hpp
include/arbitrage/infra/: event_bus.hpp  events.hpp  health_check.hpp  shutdown.hpp  tcp_client_manager.hpp  tcp_protocol.hpp  tcp_server.hpp  watchdog.hpp  watchdog_child.hpp  watchdog_client.hpp  watchdog_heartbeat.hpp  watchdog_state.hpp
include/arbitrage/ops/: alert.hpp  (+4 more)
scripts/: anti_detect.py  crawl_investing.py  fx_crawler_standalone.py  fx_selenium_crawler.py  fx_service.py  fx_stable_crawler.py  fx_watchdog.py  install_chromedriver.sh  install_packages.sh  install_selenium_env.sh  requirements.txt  secrets.sh  setup_crawler.sh  start.sh  start_fx_crawler.sh  start_fx_service.sh  start_selenium_crawler.sh  stop_fx_service.sh  test_fx_system.sh
src/: CMakeLists.txt  main.cpp
src/app/: application.cpp  display_thread.cpp  display_thread.hpp  hot_thread.cpp  hot_thread.hpp  order_thread.cpp  order_thread.hpp
src/cold/: CMakeLists.txt  monitor_main.cpp  monitor_process.cpp  order_manager_main.cpp  order_manager_process.cpp  risk_manager_main.cpp  risk_manager_process.cpp
src/common/: account_manager.cpp  chromedriver_crawler.cpp  config.cpp  config_watcher.cpp  crypto.cpp  fee_calculator.cpp  fx_service_client.cpp  fxrate.cpp  http_client.cpp  investing_crawler.cpp  logger.cpp  numa_allocator.cpp  runtime_keystore.cpp  secrets.cpp  symbol_master.cpp  thread_manager.cpp  webdriver_client.cpp
src/exchange/: order_base.cpp  websocket_base.cpp
src/exchange/binance/: order.cpp  websocket.cpp
src/exchange/bithumb/: websocket.cpp
src/exchange/mexc/: protobuf_parser.cpp  websocket.cpp
src/exchange/upbit/: order.cpp  private_websocket.cpp  websocket.cpp
src/executor/: dual_order.cpp  order_tracker.cpp  recovery.cpp  transfer.cpp
src/feeder/: CMakeLists.txt  binance_main.cpp  bithumb_main.cpp  feeder_process.cpp  mexc_main.cpp  upbit_main.cpp
src/infra/: event_bus.cpp  health_check.cpp  shutdown.cpp  tcp_client_manager.cpp  tcp_protocol.cpp  tcp_server.cpp  watchdog.cpp  watchdog_child.cpp  watchdog_client.cpp  watchdog_heartbeat.cpp  watchdog_state.cpp
src/ipc/: CMakeLists.txt  shm_manager.cpp  unix_socket.cpp
src/ops/: alert.cpp  daily_limit.cpp  stats_calculator.cpp  stats_reporter.cpp  trading_stats.cpp
src/strategy/: decision_engine.cpp  liquidity_metrics.cpp  opportunity_evaluator.cpp  orderbook_analyzer.cpp  premium_calc.cpp  quantity_optimizer.cpp  risk_model.cpp  slippage_model.cpp  strategy_executor.cpp
src/strategy/strategies/: basic_arb_strategy.cpp
tests/: CMakeLists.txt
tests/integration/: integration_test.cpp  integration_test.hpp  ipc_test.cpp  main.cpp  phase2_test.cpp
tools/cli/: CMakeLists.txt  commands.cpp  commands.hpp  main.cpp
(+28 files in other folders)
